test/variables/remote/multi/neither.good
neither.chpl:1: error: remote variables must have an initializer or type expression
