test/variables/remote/multi/neither.chpl
on Locales.last var a, b = 2, c;
